tests/samples/negative/pointers/unsafe_ptrcast_required.ax
module unsafe_ptrcast_required;

fn as_mut_ptr(value: &mut i32) -> *mut i32 {
    return unsafe { ptrat<*mut i32>(ptraddr(value)) };
}

fn main() -> i32 {
    var value: i32 = 1;
    let ptr: *mut i32 = as_mut_ptr(&mut value);
    let erased: *mut void = ptrcast<*mut void>(ptr);
    return ((ptraddr(erased)) as i32);
}
